2004-06-10  Andreas Kupries  <andreask@activestate.com>

	* generic/tclDecls.h:        Regenerated on a unix box.
	* generic/tclIntDecls.h:     The Win/DOS EOLs from the
	* generic/tclIntPlatDecls.h: last regen screwed up compilation
	* generic/tclPlatDecls.h:    with an older gcc.
	* generic/tclStubInit.c:

2004-06-10  Zoran Vasiljevic <vasiljevic@users.sf.net>

        * generic/tclIOUtil.c: partially corrected [Bug 932314].
          Also, corrected return values of Tcl_FSChdir() to
          reflect those of the underlying platform-specific call.
          Originally, return codes were mixed with those of Tcl.

2004-06-08  Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c: handle warning [Bug 969066]

2004-06-05  Kevin B. Kenny  <kennykb@acm.org>
	
	* generic/tcl.h: Corrected Tcl_WideInt declarations so that the mingw
	build works again.
	* generic/tclDecls.h:			Changes to the tests for
	* generic/tclInt.decls:			clock frequency in
	* generic/tclIntDecls.h:		Tcl_WinTime
	* generic/tclIntPlatDecls.h:		so that any clock frequency
	* generic/tclPlatDecls.h:		is accepted provided that
	* generic/tclStubInit.c:		all CPU's in the system share
	* tests/platform.test (platform-1.3):	a common chip, and hence,
	* win/tclWin32Dll.c (TclWinCPUID):	presumably, a common clock.
	* win/tclWinTest.c (TestwincpuidCmd)	This change necessitated a 
	* win/tclWinTime.c (Tcl_GetTime):	small burst of assembly code 
	to read CPU ID information, which was added as TclWinCPUID in the
	internal Stubs.  To test this code in the common case of a
	single-processor machine, a 'testwincpuid' command was added to
	tclWinTest.c, and a test case in platform.test.  Thanks to Jeff
	Godfrey and Richard Suchenwirth for reporting this bug. [Bug
	#976722]
	
2004-05-27  Kevin B. Kenny  <kennykb@acm.org>

	* tests/clock.test: Added a single test for the presence of %G
	in [clock format], and conditioned out the clock-10.x series if
	they're all going to fail because of a broken strftime() call.